# c3po-prefect

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  deploy.py  hooks.py  pyproject.toml
.github/workflows/: deploy.yml  lint.yml  test.yml
ansible/: ansible.cfg  inventory.yml  playbook.yml
ansible/host_vars/c3po-prefect/: vars.yml.example
ansible/roles/c3po/handlers/: main.yml
ansible/roles/c3po/tasks/: main.yml
ansible/roles/c3po/templates/: c3po-deploy.service.j2  c3po.env.j2
ansible/roles/prefect/handlers/: main.yml
ansible/roles/prefect/tasks/: main.yml
ansible/roles/prefect/templates/: prefect-server.service.j2
infra/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
jobs/cloudflare_dynamic_dns/: flow.py
jobs/garmin_export/: flow.py  model.py
jobs/gsheet_budget/: deposit_mapping.json  flow.py  model.py  withdrawal_mapping.json
jobs/scrape_patreon/: flow.py
jobs/ufa_api/: flow.py
scripts/: dev.sh
