[project]
name = "c3po"
version = "0.1.0"
description = "Orchestrated Python scripts via Prefect"
requires-python = ">=3.11"
dependencies = [
    "prefect>=3.0",
]

[project.optional-dependencies]
cloudflare = []
garmin = []
gsheet = []
patreon = []
ufa = []

[dependency-groups]
dev = [
    "ansible>=12.3.0",
    "ansible-lint>=26.4.0",
    "mypy>=1.0",
    "pre-commit>=4.0",
    "ruff>=0.9",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
