[project]
name = "c3po"
version = "0.1.0"
description = "Orchestrated Python scripts via Prefect"
requires-python = ">=3.11"
dependencies = [
    "prefect>=3.0",
    "razator-utils>=0.4.0",
]

[project.optional-dependencies]
cloudflare = []
garmin = [
    "garminconnect>=0.2",
    "psycopg2-binary>=2.9",
    "pytz>=2024.1",
    "sqlalchemy>=2.0",
]
gsheet = []
patreon = []
ufa = []

[dependency-groups]
dev = [
    "ansible>=12.3.0",
    "ansible-lint>=26.4.0",
    "mypy>=1.0",
    "pre-commit>=4.0",
    "pytest>=9.0.3",
    "ruff>=0.9",
    "types-pytz>=2026.1.1.20260408",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
disable_error_code = ["import-untyped"]

[[tool.mypy.overrides]]
module = "jobs.*"
disable_error_code = ["misc"]

[[tool.mypy.overrides]]
module = "deploy"
disable_error_code = ["arg-type"]
