[project]
name = "c3po"
version = "0.1.0"
description = "Orchestrated Python scripts via Prefect"
requires-python = ">=3.11"
dependencies = [
    "prefect>=3.0",
    "razator-utils>=0.4.0",
]

[project.optional-dependencies]
cloudflare = [
    "requests>=2.32",
]
garmin = [
    "garminconnect>=0.2",
    "psycopg2-binary>=2.9",
    "pytz>=2024.1",
    "sqlalchemy>=2.0",
]
gsheet = [
    "psycopg2-binary>=2.9",
    "pygsheets>=2.0",
    "python-dateutil>=2.9",
    "sqlalchemy>=2.0",
    "tabulate>=0.9",
]
patreon = [
    "gdown>=5.0",
    "pyvirtualdisplay>=3.0",
    "selenium>=4.0",
    "setuptools",
    "undetected-chromedriver>=3.0",
]
ufa = [
    "audl>=0.0.18",
    "pandas>=2.0",
    "psycopg2-binary>=2.9",
    "sqlalchemy>=2.0",
]

[dependency-groups]
dev = [
    "ansible>=12.3.0",
    "ansible-lint>=26.4.0",
    "mypy>=1.0",
    "pre-commit>=4.0",
    "pytest>=9.0.3",
    "ruff>=0.9",
    "types-pytz>=2026.1.1.20260408",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
disable_error_code = ["import-untyped"]

[[tool.mypy.overrides]]
module = "jobs.*"
disable_error_code = ["misc"]

[[tool.mypy.overrides]]
module = "jobs.scrape_patreon.*"
disable_error_code = ["attr-defined", "arg-type"]

[[tool.mypy.overrides]]
module = "jobs.gsheet_budget.*"
disable_error_code = ["no-untyped-def", "no-untyped-call", "type-arg"]

[[tool.mypy.overrides]]
module = "jobs.ufa_api.*"
disable_error_code = ["index"]

[[tool.mypy.overrides]]
module = "deploy"
disable_error_code = ["arg-type"]
